<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:padding="5dp"
        android:text="@string/welcomeTextView"
        app:layout_constrainedWidth="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBoxWantBeWilder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/wantToBeWilderCheckBox"
        app:layout_constrainedWidth="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />

    <EditText
        android:id="@+id/editTextFirstname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/firstnameEditText"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxWantBeWilder"
        app:layout_constraintWidth_percent="0.5" />

    <EditText
        android:id="@+id/editTextLastname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastnameEditText"
        android:enabled="false"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/editTextFirstname"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/buttonAccept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="onButtonClicked"
        android:text="@string/acceptButton"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/editTextLastname" />

    <TextView
        android:id="@+id/textViewCongratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="5dp"
        android:text="@string/congratulationTextView"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />
    />


</android.support.constraint.ConstraintLayout>